# web-fs

./: .gitignore  Cargo.toml  README.md  build.rs  config.yaml
.cargo/: config.toml
frontend/: .gitignore  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  types.ts
frontend/src/lib/components/: DeleteDialog.svelte  FileBrowser.svelte  FileManager.svelte  FilePreview.svelte  NewFolderDialog.svelte  RenameDialog.svelte  Toolbar.svelte  UploadZone.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
src/: config.rs  main.rs
src/api/: error.rs  files.rs  mod.rs
