[package]
name = "web_fs"
version = "0.2.0"
edition = "2021"
default-run = "web_fs"

[[bin]]
name = "web_fs"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mime_guess = "2"
rust-embed = { version = "8" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
humansize = "2"
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio-util = { version = "0.7", features = ["io"] }
serde_yaml = "0.9"

[build-dependencies]
# build.rs 仅调用系统 npm 命令，不需要额外的 Rust 依赖

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
